empire tweaks part 1

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -1145,7 +1145,7 @@
  ALREADY_THIS_IMP_REFORM: "The Empire has already enacted '§Y$WHICH$§!'."
  TOO_FAR_AHEAD_THIS_IMP_REFORM: "$WHICH$ is a reform that is too advanced, we need to enact other reforms first."
  NOT_ENOUGH_BACKERS_IMP_REFORM: "To pass the reform, there must be more princes supporting than opposing it."
- NOT_ENOUGH_AUTHORITY_IMP_REFORM: "You need at least §R$COST$§! Imperial Authority, but you only have §Y$CURR$§!."
+ NOT_ENOUGH_AUTHORITY_IMP_REFORM: "§RYou need at least §R$COST$§! Imperial Authority, but you only have §Y$CURR$§!."
  ENACT_REFORM: "Enacting §Y$REFORM$§! will remove all your current Imperial Authority."
  MEMBER_BACKING_DUE_TO: "They are backing the reform $REFORM|Y$ ($SCORE$) due to:\n"
  MEMBER_OPPOSE_DUE_TO: "They oppose the reform $REFORM|Y$ ($SCORE$) due to:\n"
@@ -1782,8 +1782,8 @@
  HREVOTE_HERETIC2: "Heretics: §R$VAL$§W\n"
  HREVOTE_RELATION: "Relations: $VAL$§W\n"
  HREVOTE_OVERLORD: "Being Vassal or Union: §G+$VAL$§W\n"
- HREVOTE_BIG_IN_HRE: "Large Nation in the Empire: §G+$VAL$§W\n"
- HREVOTE_WE_TOO_SMALL: "Too small nation: §R$VAL$§W\n"
+ HREVOTE_BIG_IN_HRE: "Dangerously powerful in the Empire: §G+$VAL$§W\n"
+ HREVOTE_WE_TOO_SMALL: "Weak nation: §R$VAL$§W\n"
  HREVOTE_NON_MEMBER: "Not a member of the SE: §R$VAL$§W\n"
  HREVOTE_IMPERIAL_AUTHORITY: "Imperial Authority: §G+$VAL$§W\n"
  HREVOTE_SAME_CULTURE: "Same Culture Group: §G+$VAL$§W\n"
