--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -642,7 +642,7 @@
  JOIN_EMPIRE: "Join the empire"
  CANNOT_JOIN_EMPIRE: "You cannot join the empire:\n$REASONS$"
  JOIN_EMPIRE_CONFIRM_DESC: "Are you sure you want to join the empire?"
- REQUIRED_REFORM_NOT_PASSED: "This reform requires $REQUIRED|Y$ to be passed first."
+ REQUIRED_REFORM_NOT_PASSED: "§RThis reform requires $REQUIRED|Y$ to be passed first."
  DISABLED_BY_REFORM: "You already passed $DISABLED_BY|Y$, which disables this reform."
  ESTATE_AGENDA_EXPIRY: "This Agenda will expire on $DATE|Y$"
  HAS_ACTIVE_IMPERIAL_INCIDENT: "Has active Imperial Incident $INCIDENT|Y$"
