--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -22,18 +22,13 @@
  emperor_reinforce_imperial_borders: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor: "Reinforced Borders of the Empire"
  emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of the Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
+ emperor_reinforce_imperial_borders_desc: "The first step to securing stability of the Empire is to secure its borders.\n---\nUnlocks \"§YFortify Border§!\" province button\nUnlocks \"§YReform the Dauerschütze§!\" decision\nUnlocks \"§YPrinces in the Army§!\" decision\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
  saelian.2.d: "Emperor of the Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to \"protect the Empire\". How shall we respond?"
  saelian.2.a: "We must obey his laws."
- saelian.2.b: "That is beyond our contract."
- fund_fort_construction_title: "Fund Castle Construction"
- fund_fort_construction_tooltip: "Fund construction of modern fortification to protect prince's realm and the Empire against the outside threats"
- fund_fort_construction_province_tooltip: "Has Capital or a province bordering non-imperial province without any fortification building"
- fund_fort_construction_desc: "A modern fortification will be built in 1 eligible province, funded by the emperor. This will cost us 75% of the original cost of the building. This will improve [From.GetAdjective] opinion about us by §G20§!. We will gain §G1§! Imperial Authority"
-
+ saelian.2.b: "That demand lies beyond our contract."
  emperor_unify_imperial_infrastructure_title: "Unify the Infrastructure"
  emperor_unify_imperial_infrastructure: "Unified Infrastructure"
  emperor_unify_imperial_infrastructure_desc: "Bringing the Empire closer economically will surely help its political situation.\n---\nUnlocks \"§YExpand Via Caroli§!\" decision\nUnlocks \"§YExpand Via Magreini§!\" decision\n---"
@@ -995,3 +990,4 @@
  desc_emperor_reformer_2: "Our actions have greatly upset the tetrarchy."
  emperor_reformer_3: "The Reformer"
  desc_emperor_reformer_3: "Our actions have greatly upset the tetrarchy."
+ build_fort_province_button_tt: "Fortify the Border"
