--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4513,7 +4513,7 @@
  PROV4512: "Terhojärvi"
  PROV4513: "Koivujärvi"
  PROV4514: "Metsästäjänjärvi"
- PROV4515: "Soran"
+ PROV4515: "Matali"
  PROV4516: "Montebrum"
  PROV4517: "Tanriq"
  PROV4518: "Abbran"
@@ -4797,12 +4797,12 @@
  PROV4796: "4796"
  PROV4797: "4797"
  PROV4798: "Kissapoikajärvi"
- PROV4799: ""
- PROV4800: ""
- PROV4801: ""
- PROV4802: ""
+ PROV4799: "Tulvaye"
+ PROV4800: "Muratta"
+ PROV4801: "Tähtijärvi"
+ PROV4802: "Soran"
  PROV4803: "Olutlampi"
- PROV4804: ""
+ PROV4804: "Sinvrijärvi"
  PROV4805: "4805"
  PROV4806: "4806"
  PROV4807: "4807"
