--- a/localisation/TD_01_flavour_silberhafen_l_english.yml
+++ b/localisation/TD_01_flavour_silberhafen_l_english.yml
@@ -19,7 +19,7 @@
  silberhafen_foreign_legions_desc: "Size of Ehren population in our lands makes fielding armies much harder, even after integration of local cultures problems of manpower shortages appeared. We couldn't have as much troops as other countries on the field. This changed after foreign legions were created, a lot of people from outside the isles started to volunteer to them, joining them gives lessons of Ehren culture and languages to outsiders. Later people that did their duty of fighting for us can retire and receive citizenship."
 
  silberhafen_mandated_help: "Mandated Help"
- silberhafen_mandated_help_desc: "Caring about our citizens was one of the things that allowed Silverhafen to survive against rival trade cities. Government helps by expanding local businesses and creating new ones. Benefits of this action stopped being that much useful to citizens because of scale but because of that we always people ready to construct or start new ventures."
+ silberhafen_mandated_help_desc: "Caring about our citizens was one of the things that allowed Silberhafen to survive against rival trade cities. Government helps by expanding local businesses and creating new ones. Benefits of this action stopped being that much useful to citizens because of scale but because of that we always people ready to construct or start new ventures."
 
  silberhafen_unlimited_freedoms: "Unlimited Freedoms"
  silberhafen_unlimited_freedoms_desc: "Unlike our brothers and sisters in Ehrenstaat, our citizens always had rights to vote, freedom to run a business without a look at their culture and our state didn't try to enforce its religion on them. This causes our government to more stable because we can't focus our efforts on actual important stuff and not distractions"
