--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1041,7 +1041,7 @@
  LIL: "Lilkumata"
  LIL_ADJ: "Lilkumati"
  LUH: "Luhardesa"
- LUG_ADJ: "Luhardesan"
+ LUH_ADJ: "Luhardesan"
  VAD: "Vadkumata"
  VAD_ADJ: "Vadkumatian"
 
