Tachiran prov names
Right in time for new release.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2414,50 +2414,50 @@
  PROV2413: "Dahatzago"
  PROV2414: "Nihobicha"
  PROV2415: "Hutza"
- PROV2416: "2416"
+ PROV2416: "Ansteens"
  PROV2417: "Anachezee"
- PROV2418: "2418"
- PROV2419: "2419"
- PROV2420: "2420"
+ PROV2418: "Nagonlkaadi"
+ PROV2419: "Cheyaanagodilzile"
+ PROV2420: "Naisokowah"
  PROV2421: "Hutza"
- PROV2422: "2422"
- PROV2423: "2423"
- PROV2424: "2424"
- PROV2425: "2425"
+ PROV2422: "Dahaijaa"
+ PROV2423: "Diyinini"
+ PROV2424: "Tsiyaasai"
+ PROV2425: "Tsiyagodezti"
  PROV2426: "2426"
- PROV2427: "2427"
- PROV2428: "2428"
- PROV2429: "2429"
- PROV2430: "2430"
- PROV2431: "2431"
- PROV2432: "2432"
+ PROV2427: "Saitsee"
+ PROV2428: "Tseealchiseni"
+ PROV2429: "Nyeegonaiso"
+ PROV2430: "Saialchiseni"
+ PROV2431: "Godiyaatu"
+ PROV2432: "Tsetahgosai"
  PROV2433: "2433"
- PROV2434: "2434"
- PROV2435: "2435"
+ PROV2434: "Ilnisai"
+ PROV2435: "Godeztitu"
  PROV2436: "Western Panpallpan Sea"
- PROV2437: "2437"
- PROV2438: "2438"
- PROV2439: "2439"
+ PROV2437: "Tuchoh"
+ PROV2438: "Nzaasai"
+ PROV2439: "Tsetahgotsee"
  PROV2440: "2440"
- PROV2441: "2441"
- PROV2442: "2442"
+ PROV2441: "Ayahagobeesh"
+ PROV2442: "Saichoh"
  PROV2443: "2443"
- PROV2444: "2444"
- PROV2445: "2445"
- PROV2446: "2446"
- PROV2447: "2447"
- PROV2448: "2448"
- PROV2449: "2449"
+ PROV2444: "Nlchihaltsise"
+ PROV2445: "Nzhoogose"
+ PROV2446: "Kaachoh"
+ PROV2447: "Nitayialtsise"
+ PROV2448: "Dziltu"
+ PROV2449: "Ditanetseens"
  PROV2450: "2450"
  PROV2451: "2451"
- PROV2452: "2452"
+ PROV2452: "Likahkeyaa"
  PROV2453: "2453"
- PROV2454: "2454"
- PROV2455: "2455"
- PROV2456: "2456"
- PROV2457: "2457"
- PROV2458: "2458"
- PROV2459: "2459"
+ PROV2454: "Ditanitu"
+ PROV2455: "Matsokowah"
+ PROV2456: "Adiidmatso"
+ PROV2457: "Tugotah"
+ PROV2458: "Hinnaagolgai"
+ PROV2459: "Yaaikeyaa"
  PROV2460: "Singiica"
  PROV2461: "Piteba"
  PROV2462: "Pinita"
@@ -2537,7 +2537,7 @@
  PROV2536: "Pumekwiy"
  PROV2537: "Kupilan"
  PROV2538: "Kosikaro"
- PROV2539: "2539"
+ PROV2539: "Tseechoh"
  PROV2540: "Tayamut"
  PROV2541: "Baamkajok"
  PROV2542: "Kuttawa"
@@ -2750,10 +2750,10 @@
  PROV2749: "Eyisaw"
  PROV2750: "Hekwayaar"
  PROV2751: "Nah'che"
- PROV2752: "2752"
- PROV2753: "2753"
- PROV2754: "2754"
- PROV2755: "2755"
+ PROV2752: "Ahniidegotah"
+ PROV2753: "Chilchoh"
+ PROV2754: "Gonlteehinibiye"
+ PROV2755: "Chinkozenlai"
  PROV2756: "2756"
  PROV2757: "Northern Okukaigan Sea"
  PROV2758: "2758"
