West Seenai prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2754,30 +2754,30 @@
  PROV2753: "Chilchoh"
  PROV2754: "Gonlteehinibiye"
  PROV2755: "Chinkozenlai"
- PROV2756: "2756"
+ PROV2756: "Konahchtokok"
  PROV2757: "Northern Okukaigan Sea"
- PROV2758: "2758"
+ PROV2758: "Uttuitsuns"
  PROV2759: "2759"
- PROV2760: "2760"
- PROV2761: "2761"
- PROV2762: "2762"
+ PROV2760: "Uttuitsuns"
+ PROV2761: "Kempiitsuns"
+ PROV2762: "Anstoweyu"
  PROV2763: "2763"
- PROV2764: "2764"
- PROV2765: "2765"
- PROV2766: "2766"
- PROV2767: "2767"
- PROV2768: "2768"
- PROV2769: "2769"
+ PROV2764: "Chewentarak"
+ PROV2765: "Kempicurrara"
+ PROV2766: "Sewakattakautwir"
+ PROV2767: "Cannikax"
+ PROV2768: "Datodacurrara"
+ PROV2769: "Uttuakul"
  PROV2770: "Yukisakan Coast"
- PROV2771: "2771"
- PROV2772: "2772"
- PROV2773: "2773"
- PROV2774: "2774"
- PROV2775: "2775"
+ PROV2771: "Kucuskunnuhunu"
+ PROV2772: "Hokwehekisi"
+ PROV2773: "Kicmasikunnuhunu"
+ PROV2774: "Kuxxawikturuk"
+ PROV2775: "Tacaweykowah"
  PROV2776: "Okukaigan Sea"
- PROV2777: "2777"
- PROV2778: "2778"
- PROV2779: "2779"
+ PROV2777: "Hiuecurrarra"
+ PROV2778: "Akhtaewarar"
+ PROV2779: "Mahorik"
  PROV2780: "2780"
  PROV2781: "2781"
  PROV2782: "2782"
@@ -2794,20 +2794,20 @@
  PROV2793: "Azumagan Coast"
  PROV2794: "Toiumi"
  PROV2795: "Tsoyokan Bay"
- PROV2796: "2796"
+ PROV2796: "Kempiitsuns"
  PROV2797: "Cheukan Coast"
- PROV2798: "2798"
+ PROV2798: "Uikwehewaka"
  PROV2799: "2799"
- PROV2800: "2800"
+ PROV2800: "Cururuacik"
  PROV2801: "Kitasarian Sea"
- PROV2802: "2802"
+ PROV2802: "Kemairkalliwa"
  PROV2803: "2803"
  PROV2804: "2804"
- PROV2805: "2805"
+ PROV2805: "Oteokmutcurrara"
  PROV2806: "2806"
- PROV2807: "2807"
+ PROV2807: "Maritusrakeka"
  PROV2808: "2808"
- PROV2809: "2809"
+ PROV2809: "Tarakarahapso"
  PROV2810: "Sea of Shirosho"
  PROV2811: "2811"
  PROV2812: "Duchtepana"
@@ -2820,7 +2820,7 @@
  PROV2819: "2819"
  PROV2820: "2820"
  PROV2821: "2821"
- PROV2822: "2822"
+ PROV2822: "Irahaiahisyowkwah"
  PROV2823: "2823"
  PROV2824: "2824"
  PROV2825: "2825"
