Wadibax changes and prov modifier

--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -178,3 +178,6 @@
 
  kakatachian_empire_reform: "Kakatachian Empire"
  kakatachian_empire_reform_desc: "The unified kingdom of Fadi and Rasus is also known as Kakatachia, the first successful unitary state controlling the entire region."
+
+ gateway_to_the_east: "Gateway to the East"
+ desc_gateway_to_the_east: "The port in Mafid greatly benefits from its location in the eastern Hestan, being able to put high tolls on luxurious goods moving from Hengtua to the west."
