Thiaran prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2294,7 +2294,7 @@
  PROV2293: "Kanag Lake"
  PROV2294: "Karajut"
  PROV2295: "Kanayuk Lake"
- PROV2296: "2296"
+ PROV2296: "Samncelt"
  PROV2297: "Suklatan"
  PROV2298: "Tode"
  PROV2299: "Trotewar"
@@ -2778,18 +2778,18 @@
  PROV2777: "Hiuecurrarra"
  PROV2778: "Akhtaewarar"
  PROV2779: "Mahorik"
- PROV2780: "2780"
- PROV2781: "2781"
- PROV2782: "2782"
+ PROV2780: "Yamccemn"
+ PROV2781: "Tawetpaln"
+ PROV2782: "Saalasstace"
  PROV2783: "Otomekai Sea"
- PROV2784: "2784"
+ PROV2784: "Scixstace"
  PROV2785: "Gulf of Kyosan"
- PROV2786: "2786"
+ PROV2786: "Cetxwistaces"
  PROV2787: "Southern Nankai Sea"
- PROV2788: "2788"
+ PROV2788: "Akscismex"
  PROV2789: "Northern Nankai Sea"
  PROV2790: "Oamai Sea"
- PROV2791: "2791"
+ PROV2791: "Yucxstaces"
  PROV2792: "Tarwemeer"
  PROV2793: "Azumagan Coast"
  PROV2794: "Toiumi"
@@ -2801,44 +2801,44 @@
  PROV2800: "Cururuacik"
  PROV2801: "Kitasarian Sea"
  PROV2802: "Kemairkalliwa"
- PROV2803: "2803"
- PROV2804: "2804"
+ PROV2803: "Tanapmispalxn"
+ PROV2804: "Sqexkalx"
  PROV2805: "Oteokmutcurrara"
  PROV2806: "2806"
  PROV2807: "Maritusrakeka"
- PROV2808: "2808"
+ PROV2808: "Tanapmisacu"
  PROV2809: "Tarakarahapso"
  PROV2810: "Sea of Shirosho"
  PROV2811: "2811"
  PROV2812: "Duchtepana"
- PROV2813: "2813"
- PROV2814: "2814"
- PROV2815: "2815"
- PROV2816: "2816"
+ PROV2813: "Keecwitas"
+ PROV2814: "Pexlsemtis"
+ PROV2815: "Tawetqiyux"
+ PROV2816: "Nawucnqelm"
  PROV2817: "Atahexura"
  PROV2818: "2818"
  PROV2819: "2819"
  PROV2820: "2820"
- PROV2821: "2821"
+ PROV2821: "Qiltmeqskun"
  PROV2822: "Irahaiahisyowkwah"
- PROV2823: "2823"
- PROV2824: "2824"
+ PROV2823: "Witassyaq"
+ PROV2824: "Peqnlawulicn"
  PROV2825: "2825"
- PROV2826: "2826"
- PROV2827: "2827"
- PROV2828: "2828"
- PROV2829: "2829"
+ PROV2826: "Picxtemx"
+ PROV2827: "Salicapx"
+ PROV2828: "Saalatemx"
+ PROV2829: "Keecqal"
  PROV2830: "2830"
  PROV2831: "2831"
- PROV2832: "2832"
+ PROV2832: "Tawetalsyep"
  PROV2833: "2833"
  PROV2834: "2834"
- PROV2835: "2835"
- PROV2836: "2836"
- PROV2837: "2837"
- PROV2838: "2838"
- PROV2839: "2839"
- PROV2840: "2840"
+ PROV2835: "Ciqsxayks"
+ PROV2836: "Skinmkecl"
+ PROV2837: "Likaymakiq"
+ PROV2838: "Askqixstalaka"
+ PROV2839: "Aksneqcucq"
+ PROV2840: "Akskeeqmisamn"
  PROV2841: "2841"
  PROV2842: "2842"
  PROV2843: "Enyehakuch"
@@ -2865,7 +2865,7 @@
  PROV2864: "Dosadooya"
  PROV2865: "Setepana" 
  PROV2866: "Soinenjärvi"
- PROV2867: "2867"
+ PROV2867: "Tawetqapus"
  PROV2868: "Ohaboai"
  PROV2869: "2869"
  PROV2870: "2870"
@@ -2874,14 +2874,14 @@
  PROV2873: "Dunaanboai"
  PROV2874: "Gaipaa"
  PROV2875: "Gaiokaipin"
- PROV2876: "2876"
+ PROV2876: "Saalasqapus"
  PROV2877: "Xakesika"
  PROV2878: "Tukveha"
  PROV2879: "Hpawahu"
  PROV2880: "Paheahpe"
  PROV2881: "Ihtawihte"
  PROV2882: "Yesehe"
- PROV2883: "2883"
+ PROV2883: "Cootxkntalnmx"
  PROV2884: "Ihakari"
  PROV2885: "Xotehe"
  PROV2886: "Arasahe"
@@ -2910,28 +2910,28 @@
  PROV2909: "Kagruk"
  PROV2910: "2910"
  PROV2911: "Saatkaak"
- PROV2912: "2912"
- PROV2913: "2913"
- PROV2914: "2914"
+ PROV2912: "Aksqixwaylsip"
+ PROV2913: "Yaqitemx"
+ PROV2914: "Sqecxatemx"
  PROV2915: "2915"
- PROV2916: "2916"
- PROV2917: "2917"
+ PROV2916: "Tawetaapeels"
+ PROV2917: "Penmelkqapus"
  PROV2918: "2918"
- PROV2919: "2919"
+ PROV2919: "Sqiwlkwuqooltas"
  PROV2920: "2920"
- PROV2921: "2921"
+ PROV2921: "Keecaapeels"
  PROV2922: "2922"
- PROV2923: "2923"
- PROV2924: "2924"
- PROV2925: "2925"
- PROV2926: "2926"
+ PROV2923: "Ayowecal"
+ PROV2924: "Yamcswaactin"
+ PROV2925: "Kaackwumeqwskun"
+ PROV2926: "Tawilkwu"
  PROV2927: "Nài Bay"
- PROV2928: "2928"
- PROV2929: "2929"
- PROV2930: "2930"
+ PROV2928: "Laciln"
+ PROV2929: "Kwulisa"
+ PROV2930: "Syaqtokwmn"
  PROV2931: "Chueyat Coast"
- PROV2932: "2932"
- PROV2933: "2933"
+ PROV2932: "Stumlakawlicq"
+ PROV2933: "Stumlasacelsn"
  PROV2934: "Bài Bay"
  PROV2935: "2935"
  PROV2936: "2936"
