Guezdena prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -950,7 +950,7 @@
  PROV949: "949"
  PROV950: "Laziani"
  PROV951: "Fomiosa"
- PROV952: "952"
+ PROV952: "Itsedyes"
  PROV953: "Siliane"
  PROV954: "Toula"
  PROV955: "Litpere"
@@ -1854,7 +1854,7 @@
  PROV1853: "Apnaq"
  PROV1854: "Yag"
  PROV1855: "Yapiniso"
- PROV1856: "1856"
+ PROV1856: "Tsaecaax"
  PROV1857: "Donakekce"
  PROV1858: "Gwinen"
  PROV1859: "Kodmena"
@@ -2282,15 +2282,15 @@
  PROV2281: "Kakasach"
  PROV2282: "Uskilancha"
  PROV2283: "Uvlugiak Lake"
- PROV2284: "2284"
+ PROV2284: "Bentaan"
  PROV2285: "Casrana"
  PROV2286: "Saota"
- PROV2287: "2287"
- PROV2288: "2288"
+ PROV2287: "Bencaax"
+ PROV2288: "Tsaeklaa"
  PROV2289: "Mach"
  PROV2290: "Iloqner"
  PROV2291: "Purangak"
- PROV2292: "2292"
+ PROV2292: "Taciltlet"
  PROV2293: "Kanag Lake"
  PROV2294: "Karajut"
  PROV2295: "Kanayuk Lake"
@@ -2933,52 +2933,52 @@
  PROV2932: "Stumlakawlicq"
  PROV2933: "Stumlasacelsn"
  PROV2934: "Bài Bay"
- PROV2935: "2935"
- PROV2936: "2936"
+ PROV2935: "Alkaenii"
+ PROV2936: "Gisnax"
  PROV2937: "Ubatvian Gulf"
  PROV2938: "Katnian Sea"
- PROV2939: "2939"
+ PROV2939: "Zeltsii"
  PROV2940: "Pemtitikian Bay"
- PROV2941: "2941"
- PROV2942: "2942"
- PROV2943: "2943"
- PROV2944: "2944"
+ PROV2941: "Dzaactagge"
+ PROV2942: "Danggeggeze"
+ PROV2943: "Tsaetget"
+ PROV2944: "Dicbaa"
  PROV2945: "Anakapan Sea"
- PROV2946: "2946"
- PROV2947: "2947"
+ PROV2946: "Tsetltsene"
+ PROV2947: "Yaatse"
  PROV2948: "Western Katnian Sea"
- PROV2949: "2949"
- PROV2950: "2950"
+ PROV2949: "Gguusset"
+ PROV2950: "Tsoghtase"
  PROV2951: "Touicholi Coast"
- PROV2952: "2952"
- PROV2953: "2953"
- PROV2954: "2954"
- PROV2955: "2955"
- PROV2956: "2956"
- PROV2957: "2957"
- PROV2958: "2958"
- PROV2959: "2959"
- PROV2960: "2960"
- PROV2961: "2961"
- PROV2962: "2962"
- PROV2963: "2963"
+ PROV2952: "Tsaxecaax"
+ PROV2953: "Tsetlaa"
+ PROV2954: "Dzaeytle"
+ PROV2955: "Taanson"
+ PROV2956: "Tescaax"
+ PROV2957: "Cetssidingah"
+ PROV2958: "Dlennaa"
+ PROV2959: "Laaax"
+ PROV2960: "Ggastsaas"
+ PROV2961: "Taelicox"
+ PROV2962: "Letnahwghiaan"
+ PROV2963: "Antsiic"
  PROV2964: "Gujtkbetsian Coast"
  PROV2965: "Tamjuqian Strait"
- PROV2966: "2966"
- PROV2967: "2967"
- PROV2968: "2968"
- PROV2969: "2969"
- PROV2970: "2970"
- PROV2971: "2971"
- PROV2972: "2972"
- PROV2973: "2973"
- PROV2974: "2974"
- PROV2975: "2975"
+ PROV2966: "Naaaxeggeze"
+ PROV2967: "Notstaaay"
+ PROV2968: "Kolenic"
+ PROV2969: "Kancuut"
+ PROV2970: "Laegestah"
+ PROV2971: "Danaanggeze"
+ PROV2972: "Datggeggeze"
+ PROV2973: "Tescaax"
+ PROV2974: "Tsiiggeze"
+ PROV2975: "Taalaa"
  PROV2976: "Cuan Gulf"
- PROV2977: "2977"
- PROV2978: "2978"
- PROV2979: "2979"
- PROV2980: "2980"
+ PROV2977: "Dzaeycaax"
+ PROV2978: "Yaakan"
+ PROV2979: "Ggangets"
+ PROV2980: "Tsaanyaak"
  PROV2981: "Nutagak"
  PROV2982: "Apuntuuk"
  PROV2983: "Sarakhani Coast"
@@ -2989,9 +2989,9 @@
  PROV2988: "Kullik"
  PROV2989: "Aularuk"
  PROV2990: "2990"
- PROV2991: "2991"
+ PROV2991: "Taatset"
  PROV2992: "2992"
- PROV2993: "2993"
+ PROV2993: "Yaakben"
  PROV2994: "2994"
  PROV2995: "Panmapak"
  PROV2996: "Maalgutkig"
@@ -3001,64 +3001,64 @@
  PROV3000: "Sivullik"
  PROV3001: "Sivisurukpags"
  PROV3002: "3002"
- PROV3003: "3003"
- PROV3004: "3004"
+ PROV3003: "Baelcaax"
+ PROV3004: "Piiyuuts"
  PROV3005: "3005"
  PROV3006: "Akiruk"
  PROV3007: "Anugi"
  PROV3008: "Kunikłuk"
  PROV3009: "Komukaigan Sea"
- PROV3010: "3010"
- PROV3011: "3011"
+ PROV3010: "Taegaledaan"
+ PROV3011: "Dantikiyaa"
  PROV3012: "Atiruk"
- PROV3013: "3013"
+ PROV3013: "Niicgak"
  PROV3014: "Tiritchikikiktak"
  PROV3015: "Kilak"
  PROV3016: "Nuvirat"
  PROV3017: "Tukkuk"
  PROV3018: "Kilgich"
  PROV3019: "Siku"
- PROV3020: "3020"
- PROV3021: "3021"
+ PROV3020: "Tluukoniic"
+ PROV3021: "Konzagh"
  PROV3022: "3022"
  PROV3023: "3023"
  PROV3024: "3024"
  PROV3025: "3025"
- PROV3026: "3026"
- PROV3027: "3027"
- PROV3028: "3028"
- PROV3029: "3029"
- PROV3030: "3030"
- PROV3031: "3031"
+ PROV3026: "Kaatsok"
+ PROV3027: "Dghoszogh"
+ PROV3028: "Cuyaak"
+ PROV3029: "Xaantsael"
+ PROV3030: "Yaayuu"
+ PROV3031: "Denaetsii"
  PROV3032: "Southern Blawennian Sea"
  PROV3033: "3033"
- PROV3034: "3034"
- PROV3035: "3035"
- PROV3036: "3036"
- PROV3037: "3037"
- PROV3038: "3038"
+ PROV3034: "Taelghal"
+ PROV3035: "Yiicdzes"
+ PROV3036: "Tsiicyen"
+ PROV3037: "Destluu"
+ PROV3038: "Tsenanaay"
  PROV3039: "3039"
- PROV3040: "3040"
- PROV3041: "3041"
- PROV3042: "3042"
- PROV3043: "3043"
+ PROV3040: "Dezaaneta"
+ PROV3041: "Danaandzaen"
+ PROV3042: "Eyuuytaa"
+ PROV3043: "Pkedakay"
  PROV3044: "3044"
- PROV3045: "3045"
- PROV3046: "3046"
- PROV3047: "3047"
- PROV3048: "3048"
- PROV3049: "3049"
- PROV3050: "3050"
- PROV3051: "3051"
- PROV3052: "3052"
- PROV3053: "3053"
- PROV3054: "3054"
- PROV3055: "3055"
- PROV3056: "3056"
- PROV3057: "3057"
- PROV3058: "3058"
- PROV3059: "3059"
- PROV3060: "3060"
+ PROV3045: "Tsilcetggen"
+ PROV3046: "Oudlkantsabaey"
+ PROV3047: "Nenyuu"
+ PROV3048: "Goaazet"
+ PROV3049: "Takaxsuu"
+ PROV3050: "Pultentuut"
+ PROV3051: "Caagotaes"
+ PROV3052: "Sbaaykole"
+ PROV3053: "Tloghcaax"
+ PROV3054: "Tsentsaex"
+ PROV3055: "Ghelaen"
+ PROV3056: "Tonggaet"
+ PROV3057: "Nenduuts"
+ PROV3058: "Latsiinsi"
+ PROV3059: "Glzuutsaa"
+ PROV3060: "Ghellae"
  PROV3061: "Jhulasa"
  PROV3062: "Jhulasa"
  PROV3063: "Northern Farigan Sea"
