--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -149,3 +149,5 @@
  whaling_ships_reform_desc: "The whale oil enterprise has become very profitable thanks to Dorchian merchant interests, imploring to expand the operations to the New World. Having many uses for commercial interests, the discovery of its flamability has been a great find for our military."
  mechanic_dorchian_fish_chance_increase_yes: "Increased chance of finding §YFish§! when colonizing"
 
+ geniburgh_silver_mine: "Silver mine of Geniburgh"
+ desc_geniburgh_silver_mine: "Even though silver was extracted in the ancient times and sometimes sold to the Yermic merchants, it was with the Silvestric migrations that its production greatly increased. So much so, that the tribe of Wymond which migrated into these isles have taken the name given to them by Saelian traders - Argenians, naming them after the incredibly valuable resource extracted in their new land."
