--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -56,6 +56,7 @@
  weesfani: "Weesfani"
 
  argenic_group: "Argenic"
+ fergen: "Fergen"
  argenian: "Argenian"
  niewebehatian: "Niewebehatian"
  thiccen: "Thiccen"
