argenia loc update + gov reform refgorm

--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -37,14 +37,14 @@
  dorchia_imperial_relations_desc: "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the Mysentrian world, which later helped us join the Saelian Church."
 
  argenia.1.t: "Death of Sexbald"
- argenia.1.desc: "The sad passing of the late King Sexbald of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
+ argenia.1.desc: "The sad passing of the late King Sexbald Wyrmwellend has caused unrest among the nobility who now wish to grant the crown of Argenia to [ANI.monarch.GetName]."
  argenia.1.a: "So be it."
  argenia.1.b: "[Root.monarch.GetName] will keep on fighting!"
  argenia.2.t: "Death of Sexbald"
  argenia.2.desc: "News are coming from the illegitimate domain of your family. Self-proclaimed king of Argenia - Sexbald - has passed away and the local nobility decided to elect our ruler as the true king of Argenia."
  argenia.2.a: "Excellent."
  argenia.3.t: "Death of Osmund"
- argenia.3.desc: "The sad passing of the late King Osmund II of Wyrmegnac has caused unrest among the nobility who now wish to grant the crown of Argenia to [ETH.monarch.GetName]."
+ argenia.3.desc: "The sad passing of the late King Osmund II Wyrmwellend has caused unrest among the nobility who now wish to grant the crown of Argenia to [ETH.monarch.GetName]."
  argenia.3.a: "So be it."
  argenia.3.b: "[Root.monarch.GetName] will keep on fighting!"
  argenia.4.t: "Death of Osmund"
@@ -70,8 +70,8 @@
 
  
  wymondian_kingdom_reform: "Wymondian Kingdom"
- wymondian_kingdom_reform_desc: "In the kingdom of Argenia, the ruler has the power to designate an heir to the throne."
- mechanic_disinherit_less_penalty_yes: "Disinheriting heirs costs 50% less prestige."
+ wymondian_kingdom_reform_desc: "Stemming from the tradition passed down from the great founder of Argenia, Wymond, all rulers have full authority to decide which heir is the most suitable to rule the kingdom. This however leads to many disgruntled children of the late king to demand retribution."
+ mechanic_disinherit_less_penalty_yes: "Disinheriting will refund §Y35§! prestige."
 
  union_of_beneul_reform: "Union of Beneul"
  union_of_beneul_reform_desc: "Union of Beneul was proclaimed after large amounts of nobility from the south fled north to the only unconquered Caidthmorian realm - Nabhin. Seven of the greatest families were granted land and titles, but most of the impoverished nobles had to become their servants."
