--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -808,7 +808,7 @@
  PROV_ADJ807: "Ulenbeorg"
  PROV_ADJ808: "Lebondun"
  PROV_ADJ809: "Guhkiesta"
- PROV_ADJ810: "Cockhaven"
+ PROV_ADJ810: "Coccwic"
  PROV_ADJ811: "Daberg"
  PROV_ADJ812: "Arinuld"
  PROV_ADJ813: "Stanrocc"
