--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -808,7 +808,7 @@
  PROV807: "Ulenbeorg"
  PROV808: "Lebondun"
  PROV809: "Guhkiesta"
- PROV810: "Cockhaven"
+ PROV810: "Coccwic"
  PROV811: "Daberg"
  PROV812: "Arinuld"
  PROV813: "Stanrocc"
