--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -13,7 +13,7 @@
  nifthem_nation_desc: "Nifthem DESC"
 
  argenia_nation_title: "Reunite Argenia @ARG"
- argenia_nation_desc: "Kingdom of Argenia is one of the oldest states in the dorchean isles being established shortly after silvestric arrival in the island of Wyrmegnac thanks to the efforts of legendary Wymond."
+ argenia_nation_desc: "Kingdom of Argenia is one of the oldest states in the dorchean isles being established shortly after silvestric arrival in the island Wyrmwellend thanks to the efforts of legendary Wymond."
  integrate_brother_argenia_tooltip: "§Y[Root.GetName]§! integrates territory of the unlawful ruler into its domain."
  argenia_trigger_tt: "Is either §YAnginneowu§! or§Y Ethelnothdun§! and the other country doesn't exist or is your subject."
 
