--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -2371,7 +2371,7 @@
  mechanic_english_parliament_yes: "Has the §YEnglish Parliament§!"
  byzantine_autocracy_reform: "Byzantine Autocracy"
  byzantine_autocracy_reform_desc: "The Byzantine government is a relic of the classical antiquity. Outdated governmental structures and lack of codified laws on the imperial succession are the great threat to the stability of the empire."
- mechanic_civil_war_on_every_new_ruler_yes: "Has §RPretender Rebels§! when a new ruler ascends the throne"
+ mechanic_civil_war_on_every_new_ruler_yes: "Has a pretender uprising when a new ruler ascends the throne."
  reformed_byzantine_monarchy_reform: "Reformed Byzantine Monarchy"
  reformed_byzantine_monarchy_reform_desc: "Through effort, blood and tears the Imperial Government of the Empire has been reformed! The brutal civil wars are no more; the power of the Senate has been restored while the Imperial Army's influence in the government is greatly curtailed."
  margraviate_reform: "Margravate"
