--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1462,7 +1462,7 @@
  PROV1461: "Icuitl"
  PROV1462: "Ayanihati Coast"
  PROV1463: "Qaevan Sea"
- PROV1464: "1464"
+ PROV1464: "Mardezand Sea"
  PROV1465: "Tetepoz"
  PROV1466: "Teocuitlacozcatl"
  PROV1467: "Eastern Qarasam Sea"
@@ -3706,7 +3706,7 @@
  PROV3705: "3705"
  PROV3706: "3706"
  PROV3707: "Parhali"
- PROV3708: "Western Kaniskatian Sea"
+ PROV3708: "Amaitian Sea"
  PROV3709: "Nogkuli"
  PROV3710: "Agihiya"
  PROV3711: "Tughili"
@@ -3723,7 +3723,7 @@
  PROV3722: "Wegkalai"
  PROV3723: "Paragu"
  PROV3724: "Akerupi"
- PROV3725: "3725"
+ PROV3725: "Western Kaniskatian Sea"
  PROV3726: "Maratam"
  PROV3727: "Daraka"
  PROV3728: "Kaniskatian Sea"
@@ -3744,13 +3744,13 @@
  PROV3743: "Daramita"
  PROV3744: "Jangksia"
  PROV3745: "Barchsi"
- PROV3746: "3746"
+ PROV3746: "South Kaniskatian Sea"
  PROV3747: "Dipati"
  PROV3748: "Sanaspa"
  PROV3749: "Vithisi"
  PROV3750: "Caektucg"
  PROV3751: "Jipsanha"
- PROV3752: "Kaniskatian Sea"
+ PROV3752: "3752"
  PROV3753: "Vastapsa"
  PROV3754: "3754"
  PROV3755: "3755"
