--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -71,7 +71,8 @@
  
  wymondian_kingdom_reform: "Wymondian Kingdom"
  wymondian_kingdom_reform_desc: "Stemming from the tradition passed down from the great founder of Argenia, Wymond, all rulers have full authority to decide which heir is the most suitable to rule the kingdom. This however leads to many disgruntled children of the late king to demand retribution."
- mechanic_disinherit_less_penalty_yes: "Disinheriting will refund §Y35§! prestige."
+ mechanic_disinherit_less_penalty_yes: "Disinheriting Heirs will refund §Y35§! of lost prestige."
+ mechanic_disinherit_less_penalty_wymondian_yes: "Disinheriting Heirs will refund §Y35§! of lost prestige, but a pretender may rise during succession."
 
  union_of_beneul_reform: "Union of Beneul"
  union_of_beneul_reform_desc: "Union of Beneul was proclaimed after large amounts of nobility from the south fled north to the only unconquered Caidthmorian realm - Nabhin. Seven of the greatest families were granted land and titles, but most of the impoverished nobles had to become their servants."
