ayanihat ideqas + map fixes

--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -219,3 +219,21 @@
  zeristan_the_yellow_banner_desc: "The legendary yellow banner of Zeristan is often associated with Azdebar, who, according to many tales, was once an important lord in the Visparayan court. Due to internal intrigues beyond his control he was exiled to pacify the Tarascan nomads, but instead he took the opportunity and allied with the local nomads and led them to rebel against Visparaya under the ancient yellow banner of his family."
  zeristan_a_new_visparaya: "A New Visparaya"
  zeristan_a_new_visparaya_desc: "The north will fall as the yellow banner will rise on the ruins of the ancient Visparaya. Centuries of oppression of Mardezard people and countless attempts to secure the profitable trade routes have given our people a will to fight with ambitions to finally show them what we are capable of."
+
+ ayanihat_ideas: "Ayanihati Ideas"
+ ayanihat_ideas_bonus: "Ayanihati Ambition"
+ ayanihat_ideas_start: "Ayanihati Traditions"
+ ayanihat_merchants_of_irith: "Merchants of Irith"
+ ayanihat_merchants_of_irith_desc: "Most merchants of Ayanihat are concentrated around the city of Irith, which historically was an important hub where goods from the sea were transferred inland towards to heart of the Visparayan empire. Later, it was a hotspot of Eopedian faith in the east. Its strength as a trading town continued to grow, still prospering in these hard times thanks to some merchants willing to purchase pirated goods."
+ ayanihat_roots_of_the_faith: "Roots of the Faith"
+ ayanihat_roots_of_the_faith_desc: "After the rise of Eopedian sects and their militaristic endeavors, many merchants were very interested in joining this new community, thanks to the highly more liberal approach to taxation of various goods. After a few years, city dwellers of Irith, tired of the old regime, deposed the current ruling Datamakh and set up a puppet monarch, who willingly subjugated himself to the rising empire."
+ ayanihat_gem_mines_of_suxram: "Gem Mines of Suxram"
+ ayanihat_gem_mines_of_suxram_desc: "Under the Ashani mountains one can find various valuable gems, many of which are impossible to find anywhere else in the world. Countless deposits of perozah, amethyst and opals are but a fraction of the wealth found deep within the mountains, supplying us until the end times."
+ ayanihat_frankrani_protectorate: "Frankrani Protectorate"
+ ayanihat_frankrani_protectorate_desc: "After Yatunian Empire started to decay and yield to various splinter states in the fourteenth century, ambitious ruler of Ayanihat, Zeynab the great, tired of their overlord's lawless extortions and tributes, finally brought to an end the Frankrani empire, turning the tables in their favour and making Ayanihat a regional hegemon."
+ ayanihat_uzwardan_school_of_theology: "Uzwardan School of Theology"
+ ayanihat_uzwardan_school_of_theology_desc: "With the rise of a new religion, the demand for a place for scholars to discuss its dogmas quickly grew. At the time, the only other centes of theological educations were in Frankras, so in order to fullfil the demand and bring the light east, priests and scholars of Uzwardan founded a School of Theology, from where many great philosophers have furthered their education."
+ ayanihat_saenayan_waterways: "Saenayan Waterways"
+ ayanihat_saenayan_waterways_desc: "Dry conditions in the Saenayan desert originally made it almost practically uninhabited. Only after trade routes through Saenaya became important source of income for many merchants, interest in settling the desert peaked and many projects were constructed. Most famous of these are the Mershan canals which were constructed to allow to tranfer goods down and up the river Mersh."
+ ayanihat_legacy_of_empires: "Legacy of Empires"
+ ayanihat_legacy_of_empires_desc: "Many empires rose and fell in the Visparaya, believing in different gods, morals, kings and dynasties, always shaping the way the region looked. What was common between them were the lands of Baraqaz and Saenaya, which hold many ancient sites of the kingdoms once ruling these lands. Insight into the stories and legends of these past eras fill our people with ambition and a wish to establish an empire of their own."
